Remove MAVEN_OPTS to avoid issue with groovy 3