@@ -1,7 +1,6 @@
 FROM maven:3-jdk-8
 
-ENV BEAM_VERSION="2.19.0-SNAPSHOT" \
-    MAVEN_OPTS="-client -XX:+TieredCompilation -XX:TieredStopAtLevel=1 -Xverify:none"
+ENV BEAM_VERSION="2.19.0-SNAPSHOT"
 
 RUN set -ex; \
     git clone --depth 1 https://github.com/Talend/component-runtime;
